# innotter

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
src/config/: middleware.py  settings.py  urls.py
src/pages/: models.py  serializers.py  urls.py  views.py
src/pages/migrations/: 0001_initial.py  0002_initial.py  0003_page_is_blocked.py  0004_alter_page_follow_requests_alter_page_followers_and_more.py  0005_alter_page_owner.py  0006_post_likes.py
src/users/: authentication.py  models.py  permissions.py  serializers.py  tokens.py  urls.py  views.py
src/users/migrations/: 0001_initial.py  0002_alter_user_email.py  0002_alter_user_role.py
